--- a/templates/artist.html
+++ b/templates/artist.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -5,7 +6,8 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-   <div class="container">
+
+<div class="container">
     <a href="/">← Retour</a>
 
     <h1>{{ .Name }}</h1>
@@ -21,6 +23,7 @@
             <li>{{ . }}</li>
         {{ end }}
     </ul>
-    </div>
+</div>
+
 </body>
 </html>
