--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <p>Depuis {{ .CreationDate }}</p>
                 <p>1er Album: {{ .FirstAlbum }}</p>
             </div>
-            <a href="/artist?id={{ .ID }}" class="btn">Voir l'artiste</a>
+            <a href="/artist?id={{ .ID }}">Voir l'artiste</a>
         </div>
     {{ end }}
 </div>
